@@ -1,6 +1,7 @@
 r8168 (8.048.03-1) UNRELEASED; urgency=medium
 
   * New upstream release 8.048.03 (2020-05-25).
+  * Refresh patches.
 
  -- Andreas Beckmann <anbe@debian.org>  Wed, 03 Jun 2020 11:16:28 +0200
 
